[package]
name = "pngme"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.5.40", features=["derive"]}
crc = "3.3.0"

[build-dependencies]
clap_mangen = "0.2.27"
clap = {version="4.5.40", features=["derive"]}
